; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/dialog/extr_editbox.c_display_one.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/dialog/extr_editbox.c_display_one.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@form_active_text_attr = common dso_local global i32 0, align 4
@form_text_attr = common dso_local global i32 0, align 4
@FALSE = common dso_local global i32 0, align 4
@TRUE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i8*, i32, i32, i32, i32)* @display_one to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @display_one(i32* %0, i8* %1, i32 %2, i32 %3, i32 %4, i32 %5) #0 {
  %7 = alloca i32*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  store i32* %0, i32** %7, align 8
  store i8* %1, i8** %8, align 8
  store i32 %2, i32* %9, align 4
  store i32 %3, i32* %10, align 4
  store i32 %4, i32* %11, align 4
  store i32 %5, i32* %12, align 4
  %14 = load i8*, i8** %8, align 8
  %15 = icmp ne i8* %14, null
  br i1 %15, label %16, label %38

16:                                               ; preds = %6
  %17 = load i32*, i32** %7, align 8
  %18 = load i8*, i8** %8, align 8
  %19 = load i32, i32* %12, align 4
  %20 = load i32, i32* %9, align 4
  %21 = load i32, i32* %10, align 4
  %22 = icmp eq i32 %20, %21
  br i1 %22, label %23, label %25

23:                                               ; preds = %16
  %24 = load i32, i32* @form_active_text_attr, align 4
  br label %27

25:                                               ; preds = %16
  %26 = load i32, i32* @form_text_attr, align 4
  br label %27

27:                                               ; preds = %25, %23
  %28 = phi i32 [ %24, %23 ], [ %26, %25 ]
  %29 = load i32, i32* %9, align 4
  %30 = load i32, i32* %11, align 4
  %31 = sub nsw i32 %29, %30
  %32 = load i32*, i32** %7, align 8
  %33 = call i32 @getmaxx(i32* %32)
  %34 = load i32, i32* @FALSE, align 4
  %35 = load i32, i32* @FALSE, align 4
  %36 = call i32 @dlg_show_string(i32* %17, i8* %18, i32 %19, i32 %28, i32 %31, i32 0, i32 %33, i32 %34, i32 %35)
  %37 = load i32, i32* @TRUE, align 4
  store i32 %37, i32* %13, align 4
  br label %40

38:                                               ; preds = %6
  %39 = load i32, i32* @FALSE, align 4
  store i32 %39, i32* %13, align 4
  br label %40

40:                                               ; preds = %38, %27
  %41 = load i32, i32* %13, align 4
  ret i32 %41
}

declare dso_local i32 @dlg_show_string(i32*, i8*, i32, i32, i32, i32, i32, i32, i32) #1

declare dso_local i32 @getmaxx(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
